# kmip2pkcs11

./: .readthedocs.yaml  Cargo.toml  Changelog.md  LICENSE  README.md  relay.conf  reset-softhsm.sh  yubihsm_pkcs11.conf
.github/workflows/: ci.yml  pkg.yml
crates/cfg/: Cargo.toml
crates/cfg/src/: args.rs  lib.rs
crates/cfg/src/v1/: mod.rs
doc/manual/: README.md  pyproject.toml
doc/manual/source/: conf.py  index.rst  usage.rst
doc/manual/source/man/: kmip2pkcs11-config.toml.rst  kmip2pkcs11.rst
etc/: config.toml  config.toml.system-service  kmip2pkcs11.conf  kmip2pkcs11.conf.system-service  nameshed-hsm-relay.conf  nameshed-hsm-relay.conf.system-service
pkg/common/: kmip2pkcs11.kmip2pkcs11.service  kmip2pkcs11.service  nameshed-hsm-relay.nameshed-hsm-relay.service  service.preset
pkg/debian/: postinst  postrm
pkg/rpm/: scriptlets.toml
pkg/rules/: packages-to-build.yml
pkg/test-scripts/: test-kmip2pkcs11.sh  test-nameshed-hsm-relay.sh
src/: client_request_handler.rs  config.rs  main.rs  pkcs11client.rs
src/kmip/: util.rs
src/kmip/operations/: activate.rs  create_key_pair.rs  decrypt.rs  discover_versions.rs  encrypt.rs  get.rs  get_attributes.rs  locate.rs  mod.rs  modify_attribute.rs  query.rs  sign.rs  unknown.rs
src/pkcs11/: error.rs  mod.rs  pool.rs  util.rs
src/pkcs11/operations/: create_key_pair.rs  decrypt.rs  encrypt.rs  get.rs  get_attributes.rs  mod.rs  sign.rs
tests/: full.rs
