[package]
name = "kmip2pkcs11"
version = "0.1.0"
edition = "2024"
authors = ["NLnet Labs <rust-team@nlnetlabs.nl>"]
description = "KMIP to PKCS#11 relay."
repository = "https://github.com/NLnetLabs/kmip2pkcs11/"
keywords = ["KMIP", "PKCS#11", "HSM", "Rust"]
categories = ["cryptography"]
license = "BSD-3-Clause"
readme = "README.md"
exclude = [".github", ".gitignore"]

[dependencies]
bcder = "0.7.5"
clap = { version = "4.5", features = ["cargo", "derive"] }
cryptoki = "^0.10.0"
domain = { git = "https://github.com/NLnetLabs/domain.git", branch = "patches-for-nameshed-prototype", features = [
  "unstable-crypto-sign",
] }
hex = "0.4"
kmip-ttlv = { git = "https://github.com/NLnetLabs/kmip-ttlv", branch = "next", version = "0.4.0", default-features = false, features = [
  "async-with-tokio",
  "high-level",
] }
kmip = { git = "https://github.com/NLnetLabs/kmip-protocol", branch = "next", package = "kmip-protocol", version = "0.5", default-features = false, features = [
  "tls-with-tokio-rustls",
] }
log = "0.4"
moka = { version = "0.12.10", features = ["sync"] }
r2d2 = "0.8.10"
rand = "0.9.2"
rcgen = { version = "0.14.3", optional = true }
rpki = { version = "0.18", features = ["crypto"] }
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread"] }
rustls = "0.23.31"
tokio-rustls = "0.26.2"
daemonbase = { git = "https://github.com/NLnetLabs/daemonbase", rev = "038578e529f64ec0fee721b034dc82ab80a23f19", version = "0.1.3" } # Use commit 038578e5 to take the fix made for PR https://github.com/NLnetLabs/daemonbase/pull/11
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
listenfd = "1.0.2"

[features]
default = ["domain/ring", "rcgen"]
openssl = ["domain/openssl"]

[profile.release]
panic = "abort"

[package.metadata.deb]
assets = [
  ["target/release/kmip2pkcs11", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/kmip2pkcs11/", "644"],
  #["doc/kmip2pkcs11.1", "usr/share/man/man1/kmip2pkcs11.1", "644"],
  ["etc/config.toml.system-service", "etc/kmip2pkcs11/config.toml", "644"],
  ["pkg/common/service.preset", "usr/lib/systemd/service-preset/50-kmip2pkcs11.preset", "644"],
]
name = "kmip2pkcs11"
maintainer = "NLnet Labs <rust-team@nlnetlabs.nl>"
license-file = ["LICENSE", "0"]
extended-description = """\
A relay for connecting OASIS KMIP compatible HSM clients to PKCS#11 compatible HSMs."""
depends = "$auto, adduser"
section = "net"
priority = "optional"
maintainer-scripts = "pkg/debian"
changelog = "target/debian/changelog" # this will be generated by the pkg workflow
copyright = "Copyright (c) 2025, NLnet Labs. All rights reserved."
conf-files = ["/etc/kmip2pkcs11/config.toml"]
systemd-units = { unit-name = "kmip2pkcs11", unit-scripts = "pkg/common", enable = false, usr-merge = true } # usr-merge is needed for Trixie and later

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/kmip2pkcs11", dest = "/usr/bin/kmip2pkcs11", mode = "755" },
  { source = "target/rpm/kmip2pkcs11.service", dest = "/lib/systemd/system/kmip2pkcs11.service", mode = "644" },
  #{ source = "doc/kmip2pkcs11.1", dest = "/usr/share/man/man1/kmip2pkcs11.1", mode = "644", doc = true },
  { source = "etc/config.toml.system-service", dest = "/etc/kmip2pkcs11/config.toml", mode = "644", config = true },
  { source = "pkg/common/service.preset", dest = "/lib/systemd/system-preset/50-kmip2pkcs11.preset", mode = "644" },
]
# These get set using cargo-generate-rpm --set-metadata at package build time.
#post_install_script = ...
#pre_uninstall_script = ...
#post_uninstall_script = ...

# ensure that the useradd and rsync tools are present by installing their respective packages
[package.metadata.generate-rpm.requires]
shadow-utils = "*"
