[package]
name = "kmip2pkcs11-cfg"
authors.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["cargo", "derive"] }
daemonbase = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
tracing = { workspace = true }
